[package]
name = "p1"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "0.9"  # Ethereum interaction
solana-sdk = "1.10"  # Solana interaction
tokio = { version = "1", features = ["full"] }  # Async runtime
reqwest = { version = "0.11", features = ["json"] }  # HTTP requests
serde = { version = "1.0", features = ["derive"] }  # Serialization/Deserialization
serde_json = "1.0"  # JSON handling
axum = "0.5"  # HTTP server framework

